cabal-version:      3.0
name:               sql-parser
version:            0.1.0.0
synopsis:           SQL Parser and Rule-Based Optimizer for OLAP
description:        A functional SQL parser and rule-based optimizer built with
                    Haskell, emphasizing pure functions and type-driven design.
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
category:           Database
build-type:         Simple

common common-options
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wmissing-export-lists
                      -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    default-extensions:
        LambdaCase,
        OverloadedStrings,
        RecordWildCards,
        TypeApplications

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        AST,
        Parser,
        Optimizer
    build-depends:
        base >= 4.14 && < 5,
        megaparsec >= 9.0,
        parser-combinators >= 1.0,
        text >= 1.2,
        mtl >= 2.2

executable sql-parser-exe
    import:           common-options
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base >= 4.14 && < 5,
        sql-parser,
        text >= 1.2
    default-language: Haskell2010

test-suite sql-parser-test
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base >= 4.14 && < 5,
        sql-parser,
        hspec >= 2.7,
        text >= 1.2
    default-language: Haskell2010
